@@ -1,11 +1,13 @@
+
 	package com.project.backend.mapper;
 	
-	import java.util.ArrayList;
-import java.util.stream.Collectors;
+	import java.math.BigDecimal;
+import java.util.ArrayList;
 
 import com.project.backend.ResponseDto.OrderItemResponseDto;
 import com.project.backend.ResponseDto.OrderResponseDto;
 import com.project.backend.entity.Order;
+import com.project.backend.entity.OrderItem;
 import com.project.backend.entity.Product;
 import com.project.backend.entity.ProductImage;
 import com.project.backend.entity.User;
@@ -14,9 +16,10 @@ import com.project.backend.entity.User;
 	
 		public static OrderResponseDto toDto(Order order) {
 
-		    User user = order.getUser();  // Get user from order
-		    
+		    User user = order.getUser();
+
 		    return OrderResponseDto.builder()
+
 		            // Order Info
 		            .orderId(order.getId())
 		            .totalAmount(order.getTotalAmount())
@@ -27,36 +30,44 @@ import com.project.backend.entity.User;
 		            .paymentStatus(order.getPaymentStatus() != null ? order.getPaymentStatus().name() : null)
 		            .status(order.getStatus())
 		            .createdAt(order.getCreatedAt())
-		            
-		            // 👤 USER INFO
+
+		            // User Info
 		            .userId(user != null ? user.getId() : null)
 		            .userName(user != null ? user.getName() : null)
 		            .userEmail(user != null ? user.getEmail() : null)
-		            
-		            // 📦 Delivery Address
+
+		            // Delivery Address Snapshot
 		            .deliveryAddressLine1(order.getDeliveryAddressLine1())
 		            .deliveryAddressLine2(order.getDeliveryAddressLine2())
 		            .deliveryCity(order.getDeliveryCity())
 		            .deliveryState(order.getDeliveryState())
 		            .deliveryPostalCode(order.getDeliveryPostalCode())
 		            .deliveryCountry(order.getDeliveryCountry())
-		            
-		            // 🛒 Items
-		            .items(order.getItems() != null ? 
-		                    order.getItems().stream()
-		                            .map(item -> OrderItemResponseDto.builder()
-		                                    .productId(item.getProduct().getId())
-		                                    .productName(item.getProduct().getName())
-		                                    .imageUrl(getPrimaryImage(item.getProduct()))
-		                                    .price(item.getPrice())
-		                                    .quantity(item.getQuantity())
-		                                    .totalPrice(item.getPrice() * item.getQuantity())
-		                                    .build())
-		                            .collect(Collectors.toList()) 
+
+		            // Order Items
+		            .items(order.getItems() != null
+		                    ? order.getItems().stream()
+		                        .map(OrderMapper::mapItemToResponse)
+		                        .toList()
 		                    : new ArrayList<>())
+
 		            .build();
 		}
+		
+		private static OrderItemResponseDto mapItemToResponse(OrderItem item) {
 
+		    return OrderItemResponseDto.builder()
+		            .productId(item.getProductId())
+		            .variantId(item.getVariantId())
+		            .productName(item.getProductName())
+		            .price(item.getPrice())
+		            .quantity(item.getQuantity())
+		            .totalPrice(
+		                    BigDecimal.valueOf(item.getPrice())
+		                            .multiply(BigDecimal.valueOf(item.getQuantity()))
+		            )
+		            .build();
+		}
 	    
 	    private static String getPrimaryImage(Product product) {
 	        return product.getImages() != null && !product.getImages().isEmpty()
